--- a/css/common.css
+++ b/css/common.css
@@ -120,7 +120,10 @@ body {
 .logo:hover,
 .logo:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .logo .logo-color {
   color: var(--accent-color);
 }
@@ -165,6 +168,8 @@ body {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .site-nav .link.current {
   position: relative;
@@ -216,6 +221,8 @@ body {
 .add-header .link:hover,
 .add-header .link:focus {
   color: var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-style {
   margin-right: 10px;
@@ -295,20 +302,23 @@ address .link:not(:last-child) {
 
   width: 44px;
   height: 44px;
-
+border-radius: 50%;
   fill: var(--primary-white-color);
   background-color: var(--footer-link-bg-color);
-  border-radius: 50%;
+  
 }
 
 .footer-link .list-item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social .list-item:hover,
-.social .list-item:focus {
+.social .link:hover,
+.social .link:focus {
   background-color: var(--accent-color);
+  
   border-radius: 50%;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* form */
@@ -518,6 +528,7 @@ address .link:not(:last-child) {
   align-items: center;
   width: 44px;
   height: 44px;
+  border-radius: 50%;
 }
 .team .link:hover,
 .team .link:focus {
@@ -526,6 +537,8 @@ address .link:not(:last-child) {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team .wrapper {
   padding-top: 30px;
@@ -585,6 +598,8 @@ address .link:not(:last-child) {
 .customers .link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* portfolio main */
@@ -623,6 +638,8 @@ address .link:not(:last-child) {
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 3px 1px rgba(0, 0, 0, 0.1);
+    transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects {
@@ -646,6 +663,7 @@ address .link:not(:last-child) {
 }
 .card-hover{
   position: relative;
+  overflow: hidden;
 }
 .card-hover::before{
   content: "";
@@ -654,20 +672,21 @@ address .link:not(:last-child) {
   background-color: var(--hover-color-blue);
   width:100%;
   height:100%;
-  opacity: 0;
+  /* opacity: 0; */
+  transform: translateY(100%);
 }
 .hover-text{
 position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
+top: 0px;
+left: 0px;
+transform: translateY(100%);
 width: 100%;
 padding-left: 24px;
 padding-right: 24px;
 padding-top: 63px;
 padding-bottom: 63px;
 margin: 0;
-opacity: 0;
+/* opacity: 0; */
 
 font-size: 18px;
 line-height: 1.56;
@@ -675,12 +694,20 @@ color: var(--primary-white-color)
 }
 .projects-link:hover .hover-text,
 .projects-link:focus .hover-text {
-  opacity: 1;
+  /* opacity: 1; */
+  transform: translateY(0%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .projects-link:hover .card-hover::before,
 .projects-link:focus .card-hover::before {
-  opacity: 0.9;
+  /* opacity: 1; */
+  transform: translateY(0%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .picture.projects-img {
  width: 100%;
 }
@@ -693,6 +720,9 @@ color: var(--primary-white-color)
 .projects-link:hover,
 .projects-link:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects .text {
   padding: 20px 24px;
@@ -721,4 +751,64 @@ color: var(--primary-white-color)
   font-size: 16px;
   line-height: 1.87;
   margin: 0;
+}
+
+/* backdrop */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 100;
+  opacity: 1;
+
+
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 528px;
+  height: 581px;
+  /* чтоб в мобилку влезло */
+background-color: var(--primary-white-color);
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+animation-name: opacity;
+animation-duration: 250ms;
+animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@keyframes opacity {
+  0%{opacity: 0.2;};
+  30%{opacity: 0.6;};
+  60%{opacity: 0.8;};
+  100%{opacity: 1;};
+}
+
+.btn-close {
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-white-color);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  pointer-events: none;
+  opacity: 0;
+
 }
