--- a/css/common.css
+++ b/css/common.css
@@ -38,6 +38,7 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+ 
 }
 
 /* button */
@@ -97,6 +98,9 @@ body {
 }
 
 /* шапка */
+.header-nav {
+  border-bottom: 1px solid #ECECEC;
+}
 /* .header-nav {
   padding-top: 24px;
   padding-bottom: 25px;
@@ -181,7 +185,7 @@ body {
   display:block; 
   width: 100%;
   height: 4px;
-  bottom: 0;
+  bottom: -1px;
   
   background-color:var(--accent-color) ;
   border-radius: 2px;
