--- a/css/common.css
+++ b/css/common.css
@@ -120,6 +120,7 @@ body {
   font-size: 26px;
   line-height: 1.2;
   text-decoration: none;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -170,6 +171,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -315,6 +317,7 @@ address .link:not(:last-child) {
  border-radius: 50%;
   fill: var(--primary-white-color);
   background-color: var(--footer-link-bg-color);
+  transition-property:background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
@@ -541,6 +544,7 @@ address .link:not(:last-child) {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition-property: background-color, fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -603,6 +607,7 @@ address .link:not(:last-child) {
   border: 1px solid var(--svg-color);
   border-radius: 4px;
   height: 90px;
+  transition-property: fill, border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -647,6 +652,7 @@ address .link:not(:last-child) {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  transition-property: color, background-color, box-shadow ;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -731,6 +737,7 @@ color: var(--primary-white-color)
 }
 .projects-link .card-hover::before,
 .projects-link .hover-text{
+  transition-property: translate;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -738,6 +745,7 @@ color: var(--primary-white-color)
   color: inherit;
   text-decoration: none;
   display: block;
+  transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  
@@ -806,12 +814,12 @@ color: var(--primary-white-color)
 background-color: var(--primary-white-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
-animation-name: opacity;
-animation-duration: 250ms;
+animation-name: change-opacity;
+animation-duration: 2500ms;
 animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@keyframes opacity {
+@keyframes change-opacity {
   0%{opacity: 0.2;};
   30%{opacity: 0.6;};
   60%{opacity: 0.8;};
