--- a/css/common.css
+++ b/css/common.css
@@ -121,14 +121,14 @@ body {
   line-height: 1.2;
   text-decoration: none;
   transition-property: color;
-  transition-duration: 250ms;
+  transition-duration: 2500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover,
 .logo:focus {
   color: var(--accent-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .logo .logo-color {
@@ -178,8 +178,8 @@ body {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .site-nav .link.current {
   position: relative;
@@ -233,8 +233,8 @@ body {
 .add-header .link:hover,
 .add-header .link:focus {
   color: var(--accent-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .icon-style {
   margin-right: 10px;
@@ -332,8 +332,8 @@ address .link:not(:last-child) {
   background-color: var(--accent-color);
   
   border-radius: 50%;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /* form */
@@ -555,8 +555,8 @@ address .link:not(:last-child) {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .team .wrapper {
   padding-top: 30px;
@@ -619,8 +619,8 @@ address .link:not(:last-child) {
 .customers .link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /* portfolio main */
@@ -662,8 +662,8 @@ address .link:not(:last-child) {
   background-color: var(--accent-color);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 3px 1px rgba(0, 0, 0, 0.1);
-    transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .projects {
@@ -689,58 +689,60 @@ address .link:not(:last-child) {
   position: relative;
   overflow: hidden;
 }
-.card-hover::before{
+/* .card-hover::before{
   content: "";
   position: absolute;
   display: block;
   background-color: var(--hover-color-blue);
   width:100%;
   height:100%;
-  /* opacity: 0; */
-  transform: translateY(100%);
-}
+ transform: translateY(100%);
+  transition-property: translate;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+} */
 .hover-text {
 position: absolute;
 top: 0px;
 left: 0px;
-transform: translateY(100%);
+transform: translateY(105%);
 width: 100%;
-padding-left: 24px;
-padding-right: 24px;
-padding-top: 63px;
-padding-bottom: 63px;
+height: 100%;
+padding: 64px 24px;
 margin: 0;
 /* opacity: 0; */
 
 font-size: 18px;
 line-height: 1.56;
-color: var(--primary-white-color)
+color: var(--primary-white-color);
+background-color: var(--hover-color-blue);
+
+transition-property: translate(Y);
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .projects-link:hover .hover-text,
 .projects-link:focus .hover-text {
   /* opacity: 1; */
   transform: translateY(0%);
-  transition-duration: 250ms;
+  /* transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
+   */
 }
 .projects-link:hover .card-hover::before,
 .projects-link:focus .card-hover::before {
   /* opacity: 1; */
   transform: translateY(0%);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .picture.projects-img {
  width: 100%;
 }
-.projects-link .card-hover::before,
-.projects-link .hover-text{
-  transition-property: translate;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .projects-link {
   color: inherit;
   text-decoration: none;
@@ -754,8 +756,8 @@ color: var(--primary-white-color)
 .projects-link:focus{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .projects .text {
   padding: 20px 24px;
