--- a/css/common.css
+++ b/css/common.css
@@ -789,10 +789,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 100;
   opacity: 1;
 
-
-  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+display: block;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -805,17 +805,17 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 background-color: var(--primary-white-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
-animation-name: change-opacity;
+/* animation-name: change-opacity;
 animation-duration: 250ms;
-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
+/* 
 @keyframes change-opacity {
   0%{opacity: 0.2;};
   30%{opacity: 0.6;};
   60%{opacity: 0.8;};
   100%{opacity: 1;};
-}
+} */
 
 .btn-close {
   position: absolute;
