--- a/css/common.css
+++ b/css/common.css
@@ -789,7 +789,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 100;
   opacity: 1;
 
-display: block;
+  display: block;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -802,12 +802,10 @@ display: block;
   max-width: 528px;
   height: 581px;
   /* чтоб в мобилку влезло */
-background-color: var(--primary-white-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
-/* animation-name: change-opacity;
-animation-duration: 250ms;
-animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
 }
 /* 
 @keyframes change-opacity {
@@ -831,8 +829,7 @@ animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .backdrop.is-hidden {
-  visibility: hidden;
   pointer-events: none;
   opacity: 0;
-
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
